tests/baselines/reference/missingArgument1.errors.txt
tests/cases/compiler/missingArgument1.ts(1,1): error TS2304: Cannot find name 'foo'.
tests/cases/compiler/missingArgument1.ts(1,5): error TS2304: Cannot find name 'a'.
tests/cases/compiler/missingArgument1.ts(1,7): error TS1135: Argument expression expected.
tests/cases/compiler/missingArgument1.ts(1,8): error TS2304: Cannot find name 'b'.


==== tests/cases/compiler/missingArgument1.ts (4 errors) ====
    foo(a,,b);
    ~~~
!!! error TS2304: Cannot find name 'foo'.
        ~
!!! error TS2304: Cannot find name 'a'.
          ~
!!! error TS1135: Argument expression expected.
           ~
!!! error TS2304: Cannot find name 'b'.